# TiebaImageRenderer

./: .gitignore  README.md  pyproject.toml  start.py
.github/: copilot-instructions.md
src/: auto_import.py  config.py  constants.py  renderer.py
src/api/: server.py
src/api/routes/: __init__.py  resource.py
src/template/content/: content_renderer.py  template.html
