[project]
name = "tiebaimagerenderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiotieba>=4.6.1",
    "fastapi>=0.123.0",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "playwright>=1.56.0",
    "ruff>=0.14.7",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
